--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,61 +1,134 @@
-# Environment Configuration
-# Copy this file to .env and fill in your values
+# =============================================================================
+# Campus Assistant - Environment Configuration
+# =============================================================================
+# Copy this file to .env and configure your values.
+# NEVER commit the .env file to version control.
+#
+# Generate secrets using:
+#   python -m app.cli generate-secret    # For SECRET_KEY
+#   python -m app.cli hash-password      # For ADMIN_PASSWORD_HASH
+# =============================================================================
 
 # ===========================================
-# AI/LLM Configuration (Choose one or both)
+# Environment & Debug
 # ===========================================
+# Environment: development, staging, production
+ENVIRONMENT=development
 
-# Google Gemini API (Recommended - Free tier available)
-# Get your API key from: https://makersuite.google.com/app/apikey
-GOOGLE_API_KEY=your_google_api_key_here
-
-# OpenAI API (Alternative)
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Default LLM provider: "gemini" or "openai"
-LLM_PROVIDER=gemini
+# Enable debug mode (NEVER enable in production)
+DEBUG=false
 
 # ===========================================
-# Translation Configuration
+# Security (REQUIRED for production)
 # ===========================================
-# NOTE: Translation uses deep-translator (free Google Translate)
-# NO API KEYS REQUIRED for translation!
+# Secret key for JWT signing and session security
+# Generate with: python -m app.cli generate-secret
+SECRET_KEY=CHANGE-THIS-IN-PRODUCTION-USE-SECURE-KEY
+
+# ===========================================
+# Admin Authentication
+# ===========================================
+# Admin username for dashboard access
+ADMIN_USERNAME=admin
+
+# Bcrypt hash of admin password (NOT the plain password!)
+# Generate with: python -m app.cli hash-password
+# Development default password: "dev-password-change-me"
+# ADMIN_PASSWORD_HASH=$2b$12$your_hash_here
 
 # ===========================================
 # Database Configuration
 # ===========================================
-
+# For development (SQLite):
 DATABASE_URL=sqlite+aiosqlite:///./data/chatbot.db
 
-# ===========================================
-# Application Settings
-# ===========================================
+# For production (PostgreSQL):
+# DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/campus_assistant
 
-APP_NAME="Campus Assistant"
-APP_VERSION="1.0.0"
-DEBUG=true
-SECRET_KEY=your-super-secret-key-change-this-in-production
+# ===========================================
+# AI/LLM Configuration (Choose one provider)
+# ===========================================
+# LLM provider: "gemini" or "openai"
+LLM_PROVIDER=gemini
 
-# CORS Origins (comma-separated)
+# Google Gemini API (Recommended - Free tier available)
+# Get your key: https://aistudio.google.com/app/apikey
+GOOGLE_API_KEY=
+
+# OpenAI API (Alternative)
+# OPENAI_API_KEY=
+
+# LLM Model Configuration
+LLM_MODEL=gemini-2.0-flash
+LLM_TEMPERATURE=0.3
+LLM_MAX_TOKENS=1024
+
+# ===========================================
+# Vector Database
+# ===========================================
+# Directory for ChromaDB persistence (use absolute path in production)
+CHROMA_PERSIST_DIRECTORY=./data/chroma
+
+# Embedding model for semantic search
+EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
+
+# Vector search parameters
+VECTOR_SEARCH_K=5
+VECTOR_SCORE_THRESHOLD=0.3
+
+# ===========================================
+# CORS Configuration
+# ===========================================
+# Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
 # ===========================================
-# Messaging Integrations (Optional)
+# Rate Limiting
 # ===========================================
-
-# Telegram Bot (Optional - get from @BotFather)
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-
-# ===========================================
-# Admin Configuration
-# ===========================================
-
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+RATE_LIMIT_REQUESTS=60
+RATE_LIMIT_WINDOW_SECONDS=60
 
 # ===========================================
-# Logging
+# Session Management
 # ===========================================
+SESSION_TIMEOUT_HOURS=24
+MAX_CONVERSATION_HISTORY=10
 
+# ===========================================
+# Logging & Observability
+# ===========================================
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
-LOG_FILE=./data/logs/chatbot.log
+
+# Log format: json (production) or text (development)
+LOG_FORMAT=json
+
+# Optional: File logging (leave empty to disable)
+# LOG_FILE=./data/logs/chatbot.log
+
+# Optional: Sentry DSN for error tracking
+# SENTRY_DSN=https://your-sentry-dsn
+
+# ===========================================
+# Telegram Integration (Optional)
+# ===========================================
+# Get token from @BotFather on Telegram
+# TELEGRAM_BOT_TOKEN=
+
+# ===========================================
+# Translation APIs (Optional)
+# ===========================================
+# Bhashini API for Indian languages
+# BHASHINI_USER_ID=
+# BHASHINI_API_KEY=
+# BHASHINI_PIPELINE_ID=
+
+# NOTE: Translation uses deep-translator (Google Translate) by default.
+# No API key required for basic translation.
+
+# ===========================================
+# Twilio/WhatsApp (Optional, Future)
+# ===========================================
+# TWILIO_ACCOUNT_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_WHATSAPP_NUMBER=
